--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,15 +1,14 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="108dp"
-        android:height="108dp"
-        android:viewportWidth="24"
-        android:viewportHeight="24"
-        android:tint="#000000">
-    <group android:scaleX="0.58"
-           android:scaleY="0.58"
-           android:translateX="5.04"
-           android:translateY="5.04">
-        <path
-                android:pathData="M17.6,11.48 L19.44,8.3a0.63,0.63 0,0 0,-1.09 -0.63l-1.88,3.24a11.43,11.43 0,0 0,-8.94 0L5.65,7.67a0.63,0.63 0,0 0,-1.09 0.63L6.4,11.48A10.81,10.81 0,0 0,1 20L23,20A10.81,10.81 0,0 0,17.6 11.48ZM7,17.25A1.25,1.25 0,1 1,8.25 16,1.25 1.25,0 0,1 7,17.25ZM17,17.25A1.25,1.25 0,1 1,18.25 16,1.25 1.25,0 0,1 17,17.25Z"
-                android:fillColor="#FF000000"/>
-    </group>
+    android:width="108dp"
+    android:height="108dp"
+    android:viewportWidth="960"
+    android:viewportHeight="960">
+  <group android:scaleX="0.45"
+      android:scaleY="0.45"
+      android:translateX="264"
+      android:translateY="264">
+    <path
+        android:pathData="M280,640h80v-480h-80v480ZM240,880q-50,0 -85,-35t-35,-85v-560q0,-50 35,-85t85,-35h440v640L240,720q-17,0 -28.5,11.5T200,760q0,17 11.5,28.5T240,800h520v-640h80v720L240,880Z"
+        android:fillColor="#FFFFFF"/>
+  </group>
 </vector>
