--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/main"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="16dp"
         tools:context=".MainActivity">
 
-    <Button
-            android:text="@string/yo_button"
+    <!-- Title -->
+    <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/title_input_layout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/title_input_layout_hint"
+            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:counterEnabled="true"
+            app:counterMaxLength="20">
+
+        <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/title_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:maxLength="20" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <!-- Content -->
+    <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/content_input_layout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/content_input_layout_hint"
+            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@id/title_input_layout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:counterEnabled="true"
+            app:counterMaxLength="500">
+
+        <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/content_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:gravity="top"
+                android:inputType="textMultiLine"
+                android:maxLength="500" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <!-- Tags -->
+    <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tag_input_layout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/tag_input_layout_hint"
+            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@id/content_input_layout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:counterEnabled="true"
+            app:counterMaxLength="15">
+
+        <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/tag_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:imeOptions="actionDone"
+                android:maxLength="15" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.chip.ChipGroup
+            android:id="@+id/tag_chip_group"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:singleLine="false"
+            app:chipSpacing="8dp"
+            app:layout_constraintTop_toBottomOf="@id/tag_input_layout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Date -->
+    <com.google.android.material.card.MaterialCardView
+            android:id="@+id/date_card"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="16dp"
+            app:cardElevation="0dp"
+            app:strokeWidth="1dp"
+            app:rippleColor="?attr/colorControlHighlight"
+            app:layout_constraintTop_toBottomOf="@id/tag_chip_group"
+            app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+                android:id="@+id/date_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/date_text_view_hint"
+                android:padding="12dp"
+                android:minHeight="48dp"
+                android:textAppearance="?attr/textAppearanceBodyLarge"
+                android:clickable="true"
+                android:focusable="true"
+                android:background="?attr/selectableItemBackgroundBorderless" />
+    </com.google.android.material.card.MaterialCardView>
+
+    <!-- Button -->
+    <com.google.android.material.button.MaterialButton
+            android:id="@+id/save_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/save_button_text"
+            style="@style/Widget.Material3.Button"
+            android:enabled="false"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@id/date_card"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+    <!-- List -->
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/journal_recycler_view"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@id/save_button"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:elevation="@dimen/cardview_default_elevation"
-    />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:listitem="@layout/journal_item"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
