--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -6,26 +6,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="16dp"
-        tools:context=".MainActivity">
+        tools:context=".ui.main.MainActivity">
 
     <androidx.core.widget.NestedScrollView
-            android:id="@+id/form_scroll"
+            android:id="@+id/nsv_scroll"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:fillViewport="true"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/journal_recycler_view">
+            app:layout_constraintEnd_toStartOf="@id/rv_journal">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/form_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
             <!-- Title -->
             <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/title_input_layout"
+                    android:id="@+id/til_title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:hint="@string/title_input_layout_hint"
@@ -37,7 +36,7 @@
                     app:layout_constraintEnd_toEndOf="parent">
 
                 <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/title_edit_text"
+                        android:id="@+id/et_title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:maxLength="20"/>
@@ -45,7 +44,7 @@
 
             <!-- Content -->
             <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/content_input_layout"
+                    android:id="@+id/til_content"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:hint="@string/content_input_layout_hint"
@@ -53,12 +52,12 @@
                     android:layout_marginTop="16dp"
                     app:counterEnabled="true"
                     app:counterMaxLength="500"
-                    app:layout_constraintTop_toBottomOf="@id/title_input_layout"
+                    app:layout_constraintTop_toBottomOf="@id/til_title"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent">
 
                 <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/content_edit_text"
+                        android:id="@+id/et_content"
                         android:layout_width="match_parent"
                         android:layout_height="120dp"
                         android:gravity="top"
@@ -66,50 +65,19 @@
                         android:maxLength="500"/>
             </com.google.android.material.textfield.TextInputLayout>
 
-            <!-- Tags -->
-            <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/tag_input_layout"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/tag_input_layout_hint"
-                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
-                    android:layout_marginTop="16dp"
-                    app:counterEnabled="true"
-                    app:counterMaxLength="15"
-                    app:layout_constraintTop_toBottomOf="@id/content_input_layout"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent">
-
-                <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/tag_edit_text"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:imeOptions="actionDone"
-                        android:maxLength="15"/>
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.chip.ChipGroup
-                    android:id="@+id/tag_chip_group"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    app:chipSpacing="8dp"
-                    app:layout_constraintTop_toBottomOf="@id/tag_input_layout"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"/>
-
             <!-- Date -->
             <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/date_card"
+                    android:id="@+id/cv_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     app:strokeWidth="1dp"
                     app:cardElevation="0dp"
-                    app:layout_constraintTop_toBottomOf="@id/tag_chip_group"
+                    app:layout_constraintTop_toBottomOf="@id/til_content"
                     app:layout_constraintStart_toStartOf="parent">
 
                 <TextView
-                        android:id="@+id/date_text_view"
+                        android:id="@+id/tv_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="12dp"
@@ -119,15 +87,46 @@
                         android:background="?attr/selectableItemBackgroundBorderless"/>
             </com.google.android.material.card.MaterialCardView>
 
+            <!-- Tags -->
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/til_tag"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:hint="@string/tag_input_layout_hint"
+                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
+                android:layout_marginTop="16dp"
+                app:counterEnabled="true"
+                app:counterMaxLength="15"
+                app:layout_constraintTop_toBottomOf="@id/cv_date"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_tag"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:imeOptions="actionDone"
+                    android:maxLength="15"/>
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/cg_tags"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:chipSpacing="8dp"
+                app:layout_constraintTop_toBottomOf="@id/til_tag"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
             <!-- Button -->
             <com.google.android.material.button.MaterialButton
-                    android:id="@+id/save_button"
+                    android:id="@+id/btn_save"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/save_button_text"
                     style="@style/Widget.Material3.Button"
                     android:layout_marginTop="16dp"
-                    app:layout_constraintTop_toBottomOf="@id/date_card"
+                    app:layout_constraintTop_toBottomOf="@id/cg_tags"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -137,14 +136,14 @@
 
     <!-- List -->
     <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/journal_recycler_view"
+            android:id="@+id/rv_journal"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="16dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/form_scroll"
+            app:layout_constraintStart_toEndOf="@id/nsv_scroll"
             tools:listitem="@layout/journal_item"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
